--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "jamjar",
   "version": "1.0.0",
-  "description": "Awebsite for the resturant jamjar",
+  "description": "A website for the resturant jamjar",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "run-dev": "nodemon -e js,mustache,json index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -19,13 +21,17 @@
   "dependencies": {
     "bootstrap": "5.1.3",
     "bootstrap-icons": "1.8.1",
+    "cors": "2.8.5",
+    "dotenv": "16.0.1",
     "express": "4.18.1",
-    "google_directions": "0.6.0",
-    "googlemaps": "1.12.0",
-    "handlebars": "4.7.7",
-    "jquery": "3.6.0",
+    "mapbox-gl": "2.8.2",
+    "method-override": "3.0.0",
+    "morgan": "1.10.0",
     "mustache-express": "1.3.2",
     "nedb": "1.8.0",
-    "nodemon": "2.0.16"
+    "node-sass-middleware": "1.0.1",
+    "nodemon": "2.0.16",
+    "open": "8.4.0",
+    "unirest": "0.6.0"
   }
 }
